--- a/main.html
+++ b/main.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+	<div class="selector">
+		<p class="p1">Pragraph 1</p>
+		<p class="p2">Pragraph 2</p>
+		<p class="p3">Pragraph 3</p>
+		<p class="p4">Pragraph 4</p>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
